--- a/hampshire-web.html
+++ b/hampshire-web.html
@@ -185,9 +185,9 @@
 		<div class="row">
 			<div class="col-xs-10 col-sm-4 top-buffer">
 				<div class="thumbnail">
-					<img alt="Leaves on a branch" class="img-responsive" src="/images/icon_leafdrop.jpg"/>
+					<img alt="Leaves on a branch" class="img-responsive" src="/images/icon_leafdrop.png"/>
 				</div>
-				<h2>Leaf Drop</h2>
+				<h3>Leaf Drop</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias enim blanditiis sed sequi, ut labore non quaerat! Libero, earum fugiat a quam quo sed, suscipit incidunt ea, placeat consectetur itaque!</p>
 				<a class="btn btn-primary" href="/investigations/hampshire-apps/leaf-drop" role="button">Learn More</a>
 			</div>
@@ -195,7 +195,7 @@
 				<div class="thumbnail">
 					<img alt="Image of buds on a tree" class="img-responsive" src="/images/icon_budburst.png"/>
 				</div>
-				<h2>Bud Burst</h2>
+				<h3>Bud Burst</h3>
 				<p>The Bud Burst project is a national citizen science project that seeks to learn more about how plants respond to changes in climate locally, regionally, and nationally. Participants report on appearances of plants, either tracking the progress of a single plant over the course of a year or once.</p>
 				<!-- <a class="btn btn-primary" href="/investigations/hampshire-apps/bud-burst" role="button">Learn More</a> -->
 			</div>
@@ -203,7 +203,7 @@
 				<div class="thumbnail">
 					<img alt="Spotted salamander" class="img-responsive" src="/images/icon_salamanderwatch.png"/>
 				</div>
-				<h2>Salamader Watch</h2>
+				<h3>Salamander Watch</h3>
 				<p>Salamander Watch is a collaboration between Hampshire College and The Hitchcock Center for the Environment in Amherst, MA. This project involves both the “Big Night” (counting of spotted salamanders during the early spring mating migration) and the Egg Mass Count (which happens 3-4 weeks after the Big Night, and is used to get a better estimate of the breeding success and overall health of the population).</p>
 				<a class="btn btn-primary" href="/investigations/hampshire-apps/salamander-watch" role="button">Learn More</a>
 			</div>
@@ -213,23 +213,23 @@
 				<div class="thumbnail">
 					<img alt="Nest containing three eggs" class="img-responsive" src="/images/icon_nestwatch.png"/>
 				</div>
-				<h2>Neighborhood Nestwatch</h2>
+				<h3>Neighborhood Nestwatch</h3>
 				<p>Modeled after the successful Smithsonian project of the same name in the Washington, D.C. area, Neighborhood Nestwatch seeks to engage ordinary citizens from Western Massachusetts in gathering data to discover precisely how urban sprawl impacts songbird populations. Assisted by trained scientists, participants learn how to locate nests in their backyards and count the eggs or recently-hatched birds within. In addition, the experts apply bands to adult birds so that the citizen scientists can track the birds' year-to-year returns to their nesting sites. The organizers of Neighborhood Nestwatch hope to compare a number of variables, including survival rates and site fidelity, between birds nesting in human-populated areas and those in forest or wildlands.</p>
 		  		<!-- <a class="btn btn-primary" href="/investigations/hampshire-apps/neighborhood-nestwatch" role="button">Learn More</a> -->
 			</div>
 			<div class="col-xs-10 col-sm-4 top-buffer">
 				<div class="thumbnail">
-					<img alt="A firefly in a hand" class="img-responsive" src="/images/icon_firefly.jpeg"/>
+					<img alt="A firefly in a hand" class="img-responsive" src="/images/icon_firefly.png"/>
 				</div>
-				<h2>Firefly Watch</h2>
+				<h3>Firefly Watch</h3>
 				<p>The Boston Museum of Science's Firefly Watch project seeks to learn more about the geographic distribution and activities of fireflies during the summer. It also seeks to discover more about the effects of man-made light and pesticides on fireflies. Participants go out into their backyards or nearby fields one night a week and fill out an observation sheet with information on the weather conditions that night and the behavior of the fireflies that they see.</p>
 		  <!-- <a class="btn btn-primary" href="/investigations/hampshire-apps/firefly-watch" role="button">Learn More</a> -->
 			</div>
 			<div class="col-xs-10 col-sm-4 top-buffer">
 				<div class="thumbnail">
-					<img alt="A monarch butterfly" class="img-responsive" src="/images/icon_monarch.jpg"/>
+					<img alt="A monarch butterfly" class="img-responsive" src="/images/icon_monarch.png"/>
 				</div>
-				<h2>Monarch Butterflies</h2>
+				<h3>Monarch Butterflies</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias enim blanditiis sed sequi, ut labore non quaerat! Libero, earum fugiat a quam quo sed, suscipit incidunt ea, placeat consectetur itaque!</p>
 				<!-- <a class="btn btn-primary" href="/investigations/hampshire-apps/monarch-butterflies" role="button">Learn More</a> -->
 			</div>
